Added the picture

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
         <!-- Hero Image -->
     <div class="hero-image">
         <div class="hero-text">
-            <picture>
-                <source srcset="./img/space.jpg">
-            </picture>
+            <img src="./img/FotoJet_7.webp">
             <h2>ROBOTS</h2>
         </div>
     </div>
