--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>Robotics Change the world</h1>
+    <h1>Robotics</h1>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
